# polkadot-cookbook

./: .codecov.yml  .gitattributes  .gitignore  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.MD  CONTRIBUTING.md  Cargo.toml  README.md  TESTING_WORKFLOWS.md  clippy.toml  install.ps1  install.sh  justfile  package.json  rust-toolchain.toml  rustfmt.toml  versions.yml
.claude/: settings.json
.devcontainer/: .dockerignore  Dockerfile  devcontainer.json  post_install.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  pull_request_template.md
cli/: Cargo.toml  README.md
cli/src/: main.rs
cli/tests/: cli_tests.rs
core/: README.md  VERSION_MANAGEMENT.md
core/src/: lib.rs  (+1 more)
docs/: 404.html  ADVANCED_TOPICS.md  README.md  RELEASE_PROCESS.md  SDK_ARCHITECTURE.md  TESTING_WORKFLOWS.md  TUTORIAL_WORKFLOW.md  VERSION_MANAGEMENT.md  WORKFLOWS.md  _config.yml  architecture.md  index.html  llms-full.txt  llms.txt  manifest.json  pre-commit-hooks.md  robots.txt  sw.js  testing.md  workflows.md
dot/cli/: Cargo.toml  README.md
dot/cli/src/: main.rs
dot/cli/tests/: cli_tests.rs  pathway_integration_tests.rs
dot/core/: Cargo.toml  README.md
dot/core/src/: constants.rs  lib.rs  query.rs  test_runner.rs
dot/core/src/config/: recipe.rs  validation.rs
dot/core/src/git/: mod.rs
dot/core/src/metadata/: frontmatter.rs  mod.rs
dot/core/src/scaffold/: bootstrap.rs  mod.rs
dot/core/src/templates/: mod.rs  recipe_yml.rs
dot/core/src/version/: loader.rs  resolver.rs  types.rs
dot/core/templates/recipe-templates/basic-interaction-template/: README.guide.md.template  README.md.template  README.tutorial.md.template
dot/core/templates/recipe-templates/polkadot-sdk-template/: README.guide.md.template  README.tutorial.md.template  recipe.config.yml.template
dot/core/templates/recipe-templates/polkadot-sdk-template/pallets/template/src/: benchmarking.rs
dot/core/templates/recipe-templates/solidity-template/: README.guide.md.template  README.tutorial.md.template
dot/core/templates/recipe-templates/testing-template/: README.guide.md.template  README.md.template  README.tutorial.md.template  recipe.config.yml.template
dot/core/templates/recipe-templates/testing-template/configs/: chopsticks.yml  network.toml
dot/core/templates/recipe-templates/xcm-template/: README.guide.md.template  README.tutorial.md.template  recipe.config.yml.template
dot/core/tests/: integration_test.rs  templates_test.rs
dot/sdk/: Cargo.toml  README.md
dot/sdk/src/: constants.rs  error.rs  fs.rs  lib.rs
dot/sdk/src/config/: mod.rs  project_types.rs  recipe.rs  validation.rs
dot/sdk/src/dependencies/: mod.rs
dot/sdk/src/git/: mod.rs
dot/sdk/src/metadata/: detection.rs  frontmatter.rs  mod.rs
dot/sdk/src/scaffold/: bootstrap.rs  mod.rs
dot/sdk/src/templates/: mod.rs  readme.rs  test.rs
dot/sdk/templates/project-templates/networks-template/: README.md.template  package.json  vitest.config.ts
dot/sdk/templates/project-templates/networks-template/tests/: network.test.ts
dot/sdk/templates/project-templates/polkadot-sdk-template/: .gitignore  Cargo.pallet-only.toml.template  README.full.md.template  README.pallet-only.md.template  chopsticks.yml.template  package.json  polkadot-api.json  rust-toolchain.toml.template  zombienet-xcm.toml.template
dot/sdk/templates/project-templates/polkadot-sdk-template/node/: Cargo.toml
dot/sdk/templates/project-templates/polkadot-sdk-template/runtime/: Cargo.toml
dot/sdk/templates/project-templates/polkadot-sdk-template/runtime/src/: lib.rs.template
dot/sdk/templates/project-templates/polkadot-sdk-template/scripts/: generate-types.sh  setup-zombienet-binaries.sh  start-dev-node.sh
dot/sdk/templates/project-templates/solidity-template/: .gitignore  README.md.template  README.tutorial.md.template  package.json
dot/sdk/templates/project-templates/solidity-template/scripts/: deploy.ts
dot/sdk/templates/project-templates/transactions-template/: package.json
dot/sdk/templates/project-templates/transactions-template/tests/: interaction.test.ts
dot/sdk/templates/project-templates/xcm-template/: .gitignore  README.guide.md.template  package.json
dot/sdk/templates/recipe-templates/basic-interaction-template/: README.guide.md.template
dot/sdk/templates/recipe-templates/networks-template/: README.guide.md.template  README.tutorial.md.template
dot/sdk/templates/recipe-templates/polkadot-sdk-template/: Cargo.toml  README.guide.md.template  README.tutorial.md.template  package.json
dot/sdk/templates/recipe-templates/polkadot-sdk-template/pallets/template/: Cargo.toml
dot/sdk/templates/recipe-templates/polkadot-sdk-template/pallets/template/src/: tests.rs
dot/sdk/templates/recipe-templates/polkadot-sdk-template/runtime/src/: lib.rs
dot/sdk/templates/recipe-templates/polkadot-sdk-template/runtime/src/configs/: mod.rs  mod.rs.template
dot/sdk/templates/recipe-templates/polkadot-sdk-template/scripts/: generate-spec.sh  start-dev-node.sh
dot/sdk/templates/recipe-templates/solidity-template/: README.guide.md.template  hardhat.config.ts  tsconfig.json
dot/sdk/templates/recipe-templates/testing-template/: .gitignore  tsconfig.json
dot/sdk/templates/recipe-templates/transactions-template/: README.tutorial.md.template
dot/sdk/templates/recipe-templates/xcm-template/: .eslintrc.json  README.tutorial.md.template
dot/sdk/tests/: integration_test.rs  templates_test.rs
polkadot-cookbook-cli/: Cargo.toml  README.md
polkadot-cookbook-cli/src/: main.rs
polkadot-docs/chain-interactions/pay-fees-different-tokens/tests/subxt-pay-fees/: Cargo.toml
polkadot-docs/chain-interactions/query-sdks/tests/subxt-query-sdks/: Cargo.toml
polkadot-docs/chain-interactions/send-transactions/tests/subxt-send-transactions/: Cargo.toml
templates/recipe-templates/polkadot-sdk-template/: Cargo.toml  README.md.template  justfile.template  recipe.config.yml.template
templates/recipe-templates/polkadot-sdk-template/pallets/template/src/: lib.rs
templates/recipe-templates/polkadot-sdk-template/tests/: integration_test.rs
(+786 files in other folders)
