[workspace]
members = [
    "core",
    "cli",
]
default-members = ["cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Polkadot Cookbook Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/polkadot-developers/polkadot-cookbook"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
cliclack = "0.3"

# Text processing
regex = "1.11"

# Git operations
git2 = "0.19"

# Testing
tempfile = "3.8"
