[workspace]
members = [
    "dot/sdk",
    "dot/cli",
]
default-members = ["dot/cli"]
resolver = "2"

[workspace.package]
version = "0.5.0"
edition = "2021"
authors = ["Polkadot Cookbook Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/polkadot-developers/polkadot-cookbook"

[workspace.dependencies]
# Async runtime
tokio = { version = "=1.43.0", features = ["full"] }

# Error handling
anyhow = "=1.0.95"
thiserror = "=2.0.9"

# Serialization
serde = { version = "=1.0.217", features = ["derive"] }
serde_json = "=1.0.135"
serde_yaml = "=0.9.34"

# Logging
tracing = "=0.1.41"
tracing-subscriber = { version = "=0.3.19", features = ["env-filter"] }

# CLI
clap = { version = "=4.5.23", features = ["derive"] }
colored = "=2.1.0"
cliclack = "=0.3.6"

# Text processing
regex = "=1.11.1"

# Git operations
git2 = { version = "=0.19.0", features = ["vendored-openssl"] }

# GitHub API
octocrab = { version = "=0.39.0", default-features = false, features = ["default-client", "rustls"] }

# Testing
tempfile = "=3.8.1"
serial_test = "=3.2.0"
