[package]
name = "cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI wrapper for Polkadot Cookbook SDK"
keywords = ["polkadot", "substrate", "blockchain", "project", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "dot"
path = "src/main.rs"

[dependencies]
# SDK library - version must match exactly to enforce single dependency model
sdk = { version = "=0.5.0", path = "../sdk" }

# Async runtime
tokio.workspace = true

# CLI
clap.workspace = true
colored.workspace = true
cliclack.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Error handling
anyhow.workspace = true

# GitHub API
octocrab.workspace = true

# Temp directories
tempfile.workspace = true

[dev-dependencies]
assert_cmd = "=2.0.16"
predicates = "=3.1.2"
tempfile.workspace = true
cargo-husky = { version = "=1.0.1", features = ["user-hooks"] }
tokio = { workspace = true, features = ["full"] }
serial_test.workspace = true
