[package]
name = "core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for Polkadot Cookbook - programmatic access to tutorial scaffolding and testing"
keywords = ["polkadot", "substrate", "blockchain", "tutorial", "sdk"]
categories = ["development-tools"]

[lib]
name = "polkadot_cookbook_core"
path = "src/lib.rs"

[features]
default = []
fs = []
test_runner = []
query = []

[dependencies]
# Async runtime
tokio.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true

# Logging
tracing.workspace = true

# Text processing
regex.workspace = true

# Git operations
git2.workspace = true

[dev-dependencies]
tempfile.workspace = true
tracing-subscriber.workspace = true
tokio = { workspace = true, features = ["test-util"] }
cliclack.workspace = true
